--- a/Number1_ProductivityPrediction.ipynb
+++ b/Number1_ProductivityPrediction.ipynb
@@ -16,7 +16,7 @@
     "Name: Austin Kane\\\n",
     "NIM: 270222932\\\n",
     "Dataset: [Dataset B](https://drive.google.com/drive/folders/1pThuel6dU23CLRseKzymT4oNDUECq_c6)\\\n",
-    "Video Link: [Video1]()"
+    "Video Link: [Video1](https://drive.google.com/file/d/19txP4sQ_4b486wlyuTfgUewIOhlS7w0N/view?usp=sharing)"
    ]
   },
   {
