--- a/Number2_OsteoarthritisClassification.ipynb
+++ b/Number2_OsteoarthritisClassification.ipynb
@@ -9,7 +9,7 @@
     "Name: Austin Kane\\\n",
     "NIM: 270222932\\\n",
     "Dataset: [Dataset B](https://drive.google.com/drive/folders/1pThuel6dU23CLRseKzymT4oNDUECq_c6)\\\n",
-    "Video Link: [Video2]()"
+    "Video Link: [Video2](https://drive.google.com/file/d/1TJkL06z1VvQaH5UIeB8x8_AeuYgk2QKX/view?usp=sharing)"
    ]
   },
   {
@@ -985,12 +985,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "f3dcb085",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "When comparing the performance of the AlexNet-inspired model to a simpler architecture, both models achieve a test accuracy of approximately 20%, which is comparable to random guessing for a five-class classification task. This suggests that neither model is effectively learning to generalize from the training data. However, the differences in prediction behavior between the two are significant. The AlexNet model predominantly predicts only one class (Class 0), achieving a perfect recall for that class but completely ignoring the others. This indicates a collapse in prediction diversity, likely due to overfitting, poor weight initialization, or inadequate training. In contrast, the simpler model, while still underperforming, demonstrates slightly more balanced recall—managing to recognize signals for both Class 0 and Class 3—which hints at a better generalization capability, albeit still limited.\n",
+    "\n",
+    "In terms of overall evaluation metrics such as precision, recall, and F1-score, both models perform poorly, but the simpler model has a slight edge in macro and weighted averages. This implies that it distributes predictions more evenly across classes rather than defaulting to a single category. The results suggest that the simpler model may provide a more stable foundation for further experimentation and tuning. Future improvements could include more training epochs, better regularization, batch normalization, or switching to loss functions like focal loss to better handle class imbalance or confusion."
+   ]
   }
  ],
  "metadata": {
