--- a/Number3.ipynb
+++ b/Number3.ipynb
@@ -8,7 +8,7 @@
     "# UTS Deep Learning Number 3\n",
     "Name: Austin Kane\\\n",
     "NIM: 270222932\\\n",
-    "Video Link: [Video3]()"
+    "Video Link: [Video3](https://drive.google.com/file/d/1qn4XWq8rXH0JEd-VfYwigXt-CbcoHp9E/view?usp=sharing)"
    ]
   },
   {
