--- a/Number2_OsteoarthritisClassification.ipynb
+++ b/Number2_OsteoarthritisClassification.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "858c712f",
    "metadata": {},
    "outputs": [
@@ -84,9 +84,9 @@
     }
    ],
    "source": [
-    "data_dir = 'Data/02/train'  # Menggunakan direktori data yang disediakan\n",
+    "data_dir = 'Data/02/train' \n",
     "\n",
-    "categories = os.listdir(data_dir)  # Misalnya: ['Doubtful', 'Mild', 'Moderate', 'Normal', 'Severe']\n",
+    "categories = os.listdir(data_dir) \n",
     "print(f\"Categories: {categories}\")"
    ]
   },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6c379865",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,6 @@
     }
    ],
    "source": [
-    "# Contoh visualisasi gambar dari setiap kelas\n",
     "fig, axes = plt.subplots(1, 5, figsize=(15, 10))\n",
     "for idx, category in enumerate(categories):\n",
     "    img_path = os.path.join(data_dir, category, os.listdir(os.path.join(data_dir, category))[0])\n",
@@ -790,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "0ae2cba8",
    "metadata": {},
    "outputs": [
@@ -836,7 +835,6 @@
     "print(f'Test Accuracy: {test_acc:.2f}')\n",
     "print(f'Test Loss: {test_loss:.2f}')\n",
     "\n",
-    "# Classification Report dan Confusion Matrix\n",
     "y_true = test_generator.classes\n",
     "y_pred = model.predict(test_generator)\n",
     "y_pred_classes = np.argmax(y_pred, axis=1)\n",
